    `__call__` (Issue #2860, PR #2859)
  * deprecated ``analysis.helanal`` module has been removed in favour of
    ``analysis.helix_analysis`` (PR #2929)
  * Move water bridge analysis from hbonds to hydrogenbonds (Issue #2739 PR #2913)
  * `threadpoolctl` is required for installation (Issue #2860)
  * Added OpenMM coordinate and topology converters (Issue #2863, PR #2917)

Deprecations
  * In 2.1.0 the TRZReader will default to a dt of 1.0 ps when failing to
    read it from the input TRZ trajectory.


06/09/20 richardjgowers, kain88-de, lilyminium, p-j-smith, bdice, joaomcteixeira,
         PicoCentauri, davidercruz, jbarnoud, RMeli, IAlibay, mtiberti, CCook96,
         Yuan-Yu, xiki-tempula, HTian1997, Iv-Hristov, hmacdope, AnshulAngaria,
         ss62171, Luthaf, yuxuanzhuang, abhishandy, mlnance, shfrz, orbeckst,
         wvandertoorn, cbouy, AmeyaHarmalkar, Oscuro-Phoenix, andrrizzi, WG150,
         tylerjereddy, Marcello-Sega

  * 1.0.0

Fixes
  * MOL2Writer now accepts both Universes and AtomgGroups (Issue #2717)
  * Use user-provided `remark` in `XYZWriter` (Issue #2692)
  * Added more informative error messages about topology attributes
    (Issue #2565)
  * Made NoDataError a subclass of ValueError *and* AttributeError
    (Issue #2635)
  * Fixed select_atoms("around 0.0 ...") selections and capped_distance
    causing a segfault (Issue #2656 PR #2665)
  * `PDBWriter` writes unitary `CRYST1` record (cubic box with sides of 1 Å)
    when `u.dimensions` is `None` or `np.zeros(6)` (Issue #2679, PR #2685)
  * Ensures principal_axes() returns axes with the right hand convention (Issue #2637)
  * Fixed retrieval of auxiliary information after getting the last timestep
    of the trajectory (Issue #2674, PR #2683).
  * n_components correctly selects PCA components (Issue #2623)
  * Use internal residue indices instead of resids for similarity and connectivity
    selections (Issues #2669 and #2672, PR #2673)
  * Checks for cryo-em 1 A^3 default CRYST1 record,